# Zlarch

./: README.md  zlarch-install.py
archinstall/lib/: general.py  user_interaction.py
archinstall/lib/disk/: user_guides.py
design/: customize.sh  env.sh
design/.config/Thunar/: uca.xml
design/.config/menus/: xfce-applications.menu
design/.config/xfce4/desktop/: icons.screen.latest.rc  icons.screen0-1008x725.rc  icons.screen0-1904x1064.rc
design/.config/xfce4/panel/: datetime-1.rc  whiskermenu-8.rc  xfce4-clipman-actions.xml
design/.config/xfce4/terminal/: terminalrc
design/.config/xfce4/xfconf/xfce-perchannel-xml/: displays.xml  keyboard-layout.xml  thunar.xml  xfce4-desktop.xml  xfce4-notifyd.xml  xfce4-panel.xml  xfce4-power-manager.xml  xfce4-settings-editor.xml  xfce4-settings-manager.xml  xfwm4.xml  xsettings.xml
old/: PKGBUILD  old.py  pokus.py  setup.cfg
old/examples/: guided.py
profiles/: desktop.py  xfce4.py  xorg.py
